Add/baseline-html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=EB+Garamond&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Genshin Impact Optimizer</h1>
+        <button>Add Artifacts</button>
+    </header>
+    <div>
+        <section>
+            GENSHIN ELEMNTS > > > > > >
+        </section>
+        <img>
+        GENSHIN CAHRARETER >> >>> >>> >>> >>> >>> >>> 
+    </div>
+    <section>
+        <aside>
+            <img>
+        </aside>
+        <button>Build Team</button>
+    </section>
+    <div>
+        <aside>
+            Team 1
+        </aside>
+        <aside>
+            Team 2 ect ect 
+        </aside>
+    </div>
+    <script src="./src/main.js"></script>
+</body>
