Add/grid-char-slector

--- a/index.html
+++ b/index.html
@@ -8,18 +8,31 @@
 <body>
     <header>
         <h1>Genshin Impact Optimizer</h1>
-        <button>Add Artifacts</button>
     </header>
+<section id = "container">
     <div>
-        <section>
+        <section id = "elements">
             GENSHIN ELEMNTS > > > > > >
         </section>
-        <img>
-        GENSHIN CAHRARETER >> >>> >>> >>> >>> >>> >>> 
+        <aside id = "charSelector">
+            <img src = "assests/Raiden-Placeholder.png" alt = "Current Displayed Charter">
+            <img src = "assests/Raiden-Placeholder.png" alt = "Current Displayed Charter">
+            <img src = "assests/Raiden-Placeholder.png" alt = "Current Displayed Charter">
+            <img src = "assests/Raiden-Placeholder.png" alt = "Current Displayed Charter">
+            <img src = "assests/Raiden-Placeholder.png" alt = "Current Displayed Charter">
+            <img src = "assests/Raiden-Placeholder.png" alt = "Current Displayed Charter">
+            <img src = "assests/Raiden-Placeholder.png" alt = "Current Displayed Charter">
+            <img src = "assests/Raiden-Placeholder.png" alt = "Current Displayed Charter">
+            <img src = "assests/Raiden-Placeholder.png" alt = "Current Displayed Charter">
+            <img src = "assests/Raiden-Placeholder.png" alt = "Current Displayed Charter">
+            <img src = "assests/Raiden-Placeholder.png" alt = "Current Displayed Charter">
+            <img src = "assests/Raiden-Placeholder.png" alt = "Current Displayed Charter">
+        </aside>
+        
     </div>
-    <section>
-        <aside>
-            <img>
+    <section id = displayedArea>
+        <aside id = "displayedChar">
+            <img src = "assests/Raiden-Placeholder.png" alt = "Current Displayed Charter">
         </aside>
         <button>Build Team</button>
     </section>
@@ -31,5 +44,6 @@
             Team 2 ect ect 
         </aside>
     </div>
+</section>
     <script src="./src/main.js"></script>
 </body>
